--- a/app/styles/material.css
+++ b/app/styles/material.css
@@ -40,3 +40,7 @@ p.warn {
     box-sizing:border-box;
     background-color: rgba(204, 2, 5, 0.31);
 }
+
+.listdemoBasicUsage md-divider {
+  margin-top: 10px;
+  margin-bottom: 0; }
