--- a/app/views/about.html
+++ b/app/views/about.html
@@ -2,7 +2,13 @@
 <div layout="column" layout-gt-xs="row" >
   <md-card flex flex-gt-xs="50">
     <md-card-content>
-      <p> This is the about view. </p>
+      <p> This Project has been created by Paolo Giorgi. </p>
+      <div>
+        <p>Have Fun at: </p>
+        <a ng-href="https://github.com/paologiorgi85/Agile-Board" target="_blank" class="md-accent ng-binding" href="https://github.com/paologiorgi85/Agile-Board">
+          Agile-Board on GitHub
+        </a>
+      </div>
     </md-card-content>
   </md-card>
 </div>
