--- a/app/views/projects/partial-project-card.html
+++ b/app/views/projects/partial-project-card.html
@@ -1,5 +1,5 @@
 <div >
-  <div ui-view="projectdetail"></div>
+  <div ui-view="project-header"></div>
   <div ui-view="backlogheader"></div>
   <div ui-view="backlogdetails"></div>
 </div>
