--- a/app/views/projects/projectlist.html
+++ b/app/views/projects/projectlist.html
@@ -7,9 +7,9 @@
         <h2 align="center">List of projects:</h2>
         <md-card-content>
           <p ng-repeat="project in projects">
-            <md-button ui-sref-active="active" ui-sref="projectDetail({ projectID: project.id })">
-            <!--md-button ui-sref-active="active" ui-sref="projectDetail({ projectID: project.id })"-->
-            <!--md-button ui-sref-active="active" ui-sref="projects.projectDetail({ projectId: project.id })"-->
+            <md-button ui-sref-active="active" ui-sref="projectCard({ projectID: project.id })">
+            <!--md-button ui-sref-active="active" ui-sref="projectCard({ projectID: project.id })"-->
+            <!--md-button ui-sref-active="active" ui-sref="projects.projectCard({ projectId: project.id })"-->
               {{project.title}}
             </md-button>
           </p>
